--- a/Clean140624.ipynb
+++ b/Clean140624.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
      "text": [
       "<>:26: SyntaxWarning: invalid escape sequence '\\p'\n",
       "<>:26: SyntaxWarning: invalid escape sequence '\\p'\n",
-      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_22820\\4147588628.py:26: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_26852\\568078231.py:26: SyntaxWarning: invalid escape sequence '\\p'\n",
       "  sys.path.insert(1, 'Osiris Temp\\processing\\python')\n"
      ]
     }
@@ -49,7 +49,35 @@
     "import math\n",
     "\n",
     "import importlib\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "from allfunctions import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class rpcHit():\n",
+    "    def __init__(self, channel, time, eta, event_num, rpc):\n",
+    "        self.rpc = rpc\n",
+    "        self.time = time\n",
+    "        self.channel = channel\n",
+    "        self.eta = eta\n",
+    "        self.event_num = event_num\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"rpcHit(channel={self.channel}, time={self.time}, eta={self.eta}, event_num={self.event_num}, rpc={self.rpc})\"\n",
+    "\n",
+    "class rpcCoincidence():\n",
+    "    def __init__(self, event_num, time_bin, hits):\n",
+    "        self.event_num = event_num\n",
+    "        self.time_bin = time_bin\n",
+    "        self.hits = hits\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"rpcCoincidence(event_num={self.event_num}, time_bin={self.time_bin}, hits={self.hits})\""
    ]
   },
   {
