--- a/Past/DataAnalysis18062024.ipynb
+++ b/Past/DataAnalysis18062024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
      "text": [
       "<>:26: SyntaxWarning: invalid escape sequence '\\p'\n",
       "<>:26: SyntaxWarning: invalid escape sequence '\\p'\n",
-      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_14776\\922193874.py:26: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_10080\\922193874.py:26: SyntaxWarning: invalid escape sequence '\\p'\n",
       "  sys.path.insert(1, 'Osiris Temp\\processing\\python')\n"
      ]
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3339,7 +3339,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<rawEventBuilder.proAnubEvent object at 0x0000019579CDC560>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(events[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3362,7 +3379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3452,7 +3469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3461,7 +3478,7 @@
      "text": [
       "<>:31: SyntaxWarning: invalid escape sequence '\\s'\n",
       "<>:31: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_14776\\79595821.py:31: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_10080\\79595821.py:31: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  ax.set_ylabel('Average $\\sqrt{d\\eta^2+d\\phi^2}$')\n"
      ]
     },
