--- a/DataAnalysis03072024.ipynb
+++ b/DataAnalysis03072024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
      "text": [
       "<>:26: SyntaxWarning: invalid escape sequence '\\p'\n",
       "<>:26: SyntaxWarning: invalid escape sequence '\\p'\n",
-      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_24948\\69911625.py:26: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_26440\\69911625.py:26: SyntaxWarning: invalid escape sequence '\\p'\n",
       "  sys.path.insert(1, 'Osiris Temp\\processing\\python')\n"
      ]
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,17 +100,17 @@
       "<>:612: SyntaxWarning: invalid escape sequence '\\e'\n",
       "<>:631: SyntaxWarning: invalid escape sequence '\\s'\n",
       "<>:716: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_24948\\688115636.py:509: SyntaxWarning: invalid escape sequence '\\e'\n",
+      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_26440\\688115636.py:509: SyntaxWarning: invalid escape sequence '\\e'\n",
       "  thisHist.cbar.set_label('$\\eta$ hit time - $\\phi$ hit time, Average (ns)', rotation=270, y=0.3,labelpad=23)\n",
-      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_24948\\688115636.py:527: SyntaxWarning: invalid escape sequence '\\e'\n",
+      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_26440\\688115636.py:527: SyntaxWarning: invalid escape sequence '\\e'\n",
       "  thisHist.cbar.set_label('$\\eta$ hit time - $\\phi$ hit time, Average (ns)', rotation=270, y=0.3,labelpad=23)\n",
-      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_24948\\688115636.py:597: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_26440\\688115636.py:597: SyntaxWarning: invalid escape sequence '\\p'\n",
       "  ax.set_xlabel('$\\phi$ Channel')\n",
-      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_24948\\688115636.py:612: SyntaxWarning: invalid escape sequence '\\e'\n",
+      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_26440\\688115636.py:612: SyntaxWarning: invalid escape sequence '\\e'\n",
       "  ax.set_xlabel('$\\eta$ Channel')\n",
-      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_24948\\688115636.py:631: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_26440\\688115636.py:631: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  ax.set_ylabel('Average $\\sqrt{d\\eta^2+d\\phi^2}$')\n",
-      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_24948\\688115636.py:716: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_26440\\688115636.py:716: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  ax.set_ylabel('Average $\\sqrt{d\\eta^2+d\\phi^2}$')\n"
      ]
     }
@@ -2380,7 +2380,19 @@
     }
    ],
    "source": [
-    "print(sum(rAligner.count[6]))"
+    "importlib.reload(rawFileReader)\n",
+    "interval = 100\n",
+    "file_path = '../Data/Fixed.raw'\n",
+    "fReader = rawFileReader.fileReader(file_path)\n",
+    "order = [[0,1], [1,2], [2,3], [3,4]]\n",
+    "\n",
+    "rAligner = realigner(fReader= fReader, max_process_event=10000, monitor_factor=10, order=order, dev_mode=True, window_size=10, record_inserted_events=False)\n",
+    "rAligner.get_aligned_events(plot_hist=True)\n",
+    "rAligner.plot_event_count_histogram()\n",
+    "rAligner.plot_rpc_involvement_histogram()\n",
+    "# rAligner.plot_alignment_metric()\n",
+    "# rAligner.plot_efficiency(text = 'Uncompensated_efficiency,  time_window = 10ns')\n",
+    "# rAligner.plot_chess_board_reconstruction()\n"
    ]
   },
   {
