--- a/09072024.ipynb
+++ b/09072024.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -78,17 +78,17 @@
       "<>:737: SyntaxWarning: invalid escape sequence '\\e'\n",
       "<>:756: SyntaxWarning: invalid escape sequence '\\s'\n",
       "<>:841: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_5224\\455278397.py:634: SyntaxWarning: invalid escape sequence '\\e'\n",
+      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_26024\\873644515.py:634: SyntaxWarning: invalid escape sequence '\\e'\n",
       "  thisHist.cbar.set_label('$\\eta$ hit time - $\\phi$ hit time, Average (ns)', rotation=270, y=0.3,labelpad=23)\n",
-      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_5224\\455278397.py:652: SyntaxWarning: invalid escape sequence '\\e'\n",
+      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_26024\\873644515.py:652: SyntaxWarning: invalid escape sequence '\\e'\n",
       "  thisHist.cbar.set_label('$\\eta$ hit time - $\\phi$ hit time, Average (ns)', rotation=270, y=0.3,labelpad=23)\n",
-      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_5224\\455278397.py:722: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_26024\\873644515.py:722: SyntaxWarning: invalid escape sequence '\\p'\n",
       "  ax.set_xlabel('$\\phi$ Channel')\n",
-      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_5224\\455278397.py:737: SyntaxWarning: invalid escape sequence '\\e'\n",
+      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_26024\\873644515.py:737: SyntaxWarning: invalid escape sequence '\\e'\n",
       "  ax.set_xlabel('$\\eta$ Channel')\n",
-      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_5224\\455278397.py:756: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_26024\\873644515.py:756: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  ax.set_ylabel('Average $\\sqrt{d\\eta^2+d\\phi^2}$')\n",
-      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_5224\\455278397.py:841: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_26024\\873644515.py:841: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  ax.set_ylabel('Average $\\sqrt{d\\eta^2+d\\phi^2}$')\n"
      ]
     }
@@ -256,9 +256,9 @@
     "\n",
     "                        \n",
     "                        if self.global_alignment == True:\n",
-    "                            self.readTDCTimeDiffs()\n",
-    "                            # self.populate_hits()\n",
-    "                            # status, failure = self.check_eta_trigger()\n",
+    "                            # self.readTDCTimeDiffs()\n",
+    "                            self.populate_hits()\n",
+    "                            status, failure = self.check_eta_trigger()\n",
     "                            # if status == False:\n",
     "                                # print(f'failure, processed Evenets : {self.processedEvents}, failed event : {failure[0]}')\n",
     "                                # self.recorded.append(self.etaHits)\n",
