--- a/Osiris Temp/processing/python/ExampleEventLoop2.ipynb
+++ b/Osiris Temp/processing/python/ExampleEventLoop2.ipynb
@@ -93,6 +93,28 @@
     "#reset afterwards\n",
     "aTools.ConstructEventInsertionList  = original_ConstructEventInsertionList\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(rawFileReader) # Reload fReader\n",
+    "interval = 100 # Set your monitoring chunck size\n",
+    "file_path = '../../../../Data/Fixed.raw' # Load in the Raw File\n",
+    "fReader = rawFileReader.fileReader(file_path) # load in the classs object\n",
+    "order = [[0,1], [1,2], [2,3], [3,4]] # Order what you want to align\n",
+    "max_process_event_chunk = 100 # End the loop early\n",
+    "processedEvents = 0 # Initialisation\n",
+    "while processedEvents < max_process_event_chunk:\n",
+    "    processedEvents += 1\n",
+    "    event = fReader.get_aligned_events(order=order, interval=interval)\n",
+    "    # event is a list of proAnubis event object, size {interval}, where it is globally aligned\n",
+    "    # unaligned or realigned chunks are thrown and not outputed\n",
+    "    # can use decorators to capture inner variables like alignment metric. Or set it to global and extract\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
