--- a/Documentation/Tutorial.ipynb
+++ b/Documentation/Tutorial.ipynb
@@ -229,6 +229,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Internal variable extraction\n",
+    "\n",
+    "some internal variables might be interesting and worth studying. There are a variety of ways to extract them, the simplest way is to go back to the code, and add an extra class variable and record all the information in an instance. This however, is unsustainable and the usual gist is that you shouldn't rewrite a working system just to extract some variables you need once..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Decorators\n",
     "Decorators are a great tool to extract and capture information within the event run time without altering the original code. please read [Decorators tutorial](https://realpython.com/primer-on-python-decorators/) for more information\n",
     "Please note you need to restart the environment if the function rewrote by the decorator runs into issue, because the function will not return to original state"
@@ -312,21 +321,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Recalculation\n",
+    "### Re_calculation\n",
     "\n",
-    "Athough some calculations are processed internally, it might be easier to reprocess the output event list again by redoing the necessary calculations. This will result in redundant calculations, and not possible for all calculations, such as TDC monitoring metric and realignment words used"
+    "Athough some calculations are processed internally, it might be easier to reprocess the output event list again by redoing the necessary calculations. This will result in redundant calculations, and not possible for all calculations, such as TDC monitoring metric and realignment words used. \n",
+    "\n",
+    "Both fReader and this code is written to ensure the data is calculated in chunks, this avoids memory overflow, and allow the program to start and terminate anywhere one desires.\n",
+    "\n",
+    "When the event chunk is loaded in to the instance, calculation has to be done within this instance, and saved into an external variable. Below is an example of using the function RTools.`find_tdc_event_count` to calculate the number of headers in each TDC and writing into a buffer `tdc_event_count_buffer` for that instance, then the information from the buffer is tranfered into an external memory storage `tdc_event_count` outside the process loop\n",
+    "\n",
+    "Similarly, the alignment metric can be calculated from ATools.`calcAvgAlign` (for more information refer to documentation)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Events: 100%|██████████| 100/100 [00:01<00:00, 50.91Events/s]\n"
+      "Processing Events: 100%|██████████| 100/100 [00:02<00:00, 46.74Events/s]\n"
      ]
     }
    ],
@@ -342,31 +357,31 @@
     "\n",
     "#Initialise variables to store the results\n",
     "mets = [[] for tdc in range(5)]\n",
-    "empty_header = 0\n",
-    "emtpy_events_with_header = [[], []]\n",
-    "tdc_event_count = [[] for tdc in range(5)]\n",
+    "empty_header = 0 # Counting the number of empty headers\n",
+    "emtpy_events_with_header = [[], []] # prepare two lists of same dimensions for line graph plotting\n",
+    "tdc_event_count = [[] for tdc in range(5)]# prepare for histogram plotting\n",
     "\n",
     "\n",
     "with tqdm(total=max_process_event_chunk, desc=\"Processing Events\", unit='Events') as pbar:\n",
     "    while processedEvents < max_process_event_chunk:\n",
     "        processedEvents += 1\n",
-    "        event_chunk = fReader.get_aligned_events(order=order, interval=interval)\n",
-    "        tdc_event_count_buffer = RTools.find_tdc_event_count(event_chunk)\n",
-    "        [tdc_event_count[i].append(tdc_event_count_buffer[i]) for i in range(5)]\n",
+    "        event_chunk = fReader.get_aligned_events(order=order, interval=interval) # get the aligned events\n",
+    "        tdc_event_count_buffer = RTools.find_tdc_event_count(event_chunk) # finding the number of headers\n",
+    "        [tdc_event_count[i].append(tdc_event_count_buffer[i]) for i in range(5)] # write from buffer to memory\n",
     "        for idx, (i, j) in enumerate(order):\n",
-    "            x, y, l, m = ATools.find_tdc_alignment_metric(i, j)\n",
-    "            alignMet = ATools.calcAvgAlign(event_chunk, 0, x, y, l, m, i, j, processedEvents)\n",
-    "            empty_header += (alignMet == 100)\n",
-    "            emtpy_events_with_header[0].append(empty_header)\n",
+    "            x, y, l, m = ATools.find_tdc_alignment_metric(i, j) # determining which RPCs to use for aignment metric\n",
+    "            alignMet = ATools.calcAvgAlign(event_chunk, 0, x, y, l, m, i, j, processedEvents) # determine the alignment metric\n",
+    "            empty_header += (alignMet == -1) # Calculating the number of empty headers\n",
+    "            emtpy_events_with_header[0].append(empty_header) # write to memory\n",
     "            emtpy_events_with_header[1].append(processedEvents)\n",
-    "            mets[idx].append(alignMet)\n",
+    "            mets[idx].append(alignMet) # write to memory\n",
     "        pbar.update(1)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,15 +453,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "fReader doesn't have many instances for storing metric, they are typically thrown out after use, hence it is very difficult to extract these out. However, it becomes easier as we move to Timing Analyser and Reconstructor where the class instances can be called directly to extract and record data. \n",
+    "\n",
+    "The general idea is, if the data is in Osiris, they are NOT stored so that it will run smoothly always. Other data like reconstructio and timing analyser will be stored in class instances, which will remain in memory as long you as you don't reload them"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The `Timing Analyser`\n",
+    "\n",
+    "The `Timing_Analyser` class is designed to process and analyze timing data from event chunks. This class helps in calculating and visualizing time of flight analysis, residuals, and other related metrics for the pro_anubis detectors. It provides functionalities to update events, read TDC (Time-to-Digital Converter) time differences, calculate residuals, check eta trigger, and plot various data for analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When using any class from `proAnubis_analysis_tools`, it is important that a new event loop format is used. The loop involves an initialisation, which clears all instances. When the event loop is entered, calculations are done through internal instances, meaning one must not TAnalyser, but to update the event_chunk through TAnalyser.`update_event`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One of the most useful metric to determine the corruption status is TAnalyser.`check_eta_trigger`. This functino checks if each chunk has corruption and also count the total number of corrupted events with which RPC was involved in the corruption within the class instance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Events: 100%|██████████| 150/150 [00:03<00:00, 47.62Events/s]\n"
+      "Processing Events: 100%|██████████| 150/150 [00:03<00:00, 49.90Events/s]\n"
      ]
     }
    ],
@@ -472,8 +521,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To plot these on a graph, note we are calling from TAnalyser to obtain the information we needed"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,8 +556,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As an example, one can also plot directly from class accessing the class variable. This makes no difference fundamentally, but it does make the code much clearer and immediately clear what you are plotting"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,26 +575,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A reconstruction event loop demonstration for finding the efficiency of each RPCs. Effiiency was calculated using a tag and probe method, where the test RPC is removed, and a track using all other 5 RPCs were fitted. The fitted track is then extrapolated to the test RPC, where the efficiency is probed"
+    "## TDC monitoring\n",
+    "The TDC monitoring script is innatly written in the fReader. Every 2500 events, the TDC status is monitored. This TDC status metric counts the number of events where the first time is within the \"bad region\" with an event time> 300 ns compare to the \"good region\" where the event time <300ns. It was typicaly found that the TDC is in an error state when the fraction is larger than 0.2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Events:   0%|          | 0/200 [00:00<?, ?Events/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing Events: 100%|██████████| 200/200 [00:03<00:00, 63.83Events/s] \n"
+      "Processing Events: 100%|██████████| 200/200 [00:02<00:00, 70.12Events/s] \n"
      ]
     }
    ],
@@ -545,12 +602,14 @@
     "max_process_event_chunk = 200 # End the loop early\n",
     "processedEvents = 0 # Initialisation\n",
     "initial_event_chunk = fReader.get_aligned_events(order=order, interval=interval)\n",
+    "#Initialisation\n",
     "tdc_mets = [[] for tdc in range(5)]\n",
     "Tot_TDC_info = [[] for tdc in range(5)]\n",
     "with tqdm(total=max_process_event_chunk, desc=\"Processing Events\", unit='Events') as pbar:\n",
     "    while processedEvents < max_process_event_chunk:\n",
     "        processedEvents += 1\n",
-    "        event_chunk, tdc_met, TDC_info = fReader.get_aligned_events(order=order, interval=interval, extract_tdc_mets = True)\n",
+    "        event_chunk, tdc_met, TDC_info = fReader.get_aligned_events(order=order, interval=interval, extract_tdc_mets = True) \n",
+    "        # get_aligned_events have a choice to output the tdc metric and tdc information by setting extract_tdc_mets to be True\n",
     "        [tdc_mets[i].append(tdc_met[i]) for i in range(5) if tdc_met[i] != 0]\n",
     "        [Tot_TDC_info[i].extend(TDC_info[i]) for i in range(5) if TDC_info[i]]\n",
     "        pbar.update(1)\n"
@@ -558,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,8 +639,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These data can be used to plot graphs to decipher the reason behind its error behavior. It was found that certain noisy bad strips caused the bad hit times, where caused realignment to not be possile. These strips have already been removed in the fReader, what you are seeing in the latest dataset is due to unknown reasons. You can observe from the TDC_first_hit_time_channels between the good and bad regions that the active channels are completely different. The reason behind this erro rstate is unknonw"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,8 +659,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Getting the variables used to calculate the alignment metric is even more difficult, since the output data is not representative to what the code used to compute the alignment metric, hence we need decorators to capture the variable in question during the program's run time, record them, and plot them. Below is an example decorator designed to capture the event words used when doing realignments. \n",
+    "\n",
+    "Essentially it access the functino in question, capturing its' input and output, and calculating the the min channels along side the original calculation. (its actually after the original calculation because u are using CPU...) \n",
+    "\n",
+    "You may ask why do I do this, well this is because the functino calculating this is step 4 deep in the code, you need to pretty much add this extra check in every functino it passes through, eventually extracting it to the top level. This means a huge amount of code for fReader which we don't want. Extra checks will slow down the algorithm, since we are dealing with events in the tens millions, each if check will accumulate"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,14 +729,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Events: 100%|██████████| 200/200 [00:03<00:00, 59.42Events/s]\n"
+      "Processing Events: 100%|██████████| 200/200 [00:03<00:00, 59.52Events/s]\n"
      ]
     }
    ],
@@ -690,14 +767,14 @@
     "        Capturer.processedEvents = processedEvents\n",
     "        event_chunk = fReader.get_aligned_events(order=order, interval=interval)\n",
     "        pbar.update(1)\n",
-    "\n",
+    "# Return to original, or restart kernal\n",
     "ATools.testAlign = original_testAlign\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,6 +898,14 @@
    "source": [
     "importlib.reload(proAnubis_Analysis_Tools)\n",
     "TAnalyser.plot_residual()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reconstructor\n",
+    "Very similar to the Timing Analyser, the Reconstructor's main goal is to reconstruct muon paths from the given data. The details of the code can be found under the documentation under the function RTools.`reconstruct_timed_Chi2_ByRPC`"
    ]
   },
   {
