--- a/Documentation/Tutorial.ipynb
+++ b/Documentation/Tutorial.ipynb
@@ -52,7 +52,7 @@
      "text": [
       "<>:4: SyntaxWarning: invalid escape sequence '\\O'\n",
       "<>:4: SyntaxWarning: invalid escape sequence '\\O'\n",
-      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_19204\\619255930.py:4: SyntaxWarning: invalid escape sequence '\\O'\n",
+      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_25316\\619255930.py:4: SyntaxWarning: invalid escape sequence '\\O'\n",
       "  sys.path.insert(1, '..\\Osiris Temp\\processing\\python') # Insert your path to Osiris\n"
      ]
     }
@@ -342,14 +342,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Events: 100%|██████████| 100/100 [00:02<00:00, 46.74Events/s]\n"
+      "Processing Events: 100%|██████████| 100/100 [00:01<00:00, 50.25Events/s]\n"
      ]
     }
    ],
@@ -388,8 +388,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alignment Metric is calculated by comparing the distance in location in eta and phi directions of the two TDCs under questions are recorded as their first hit time event. We are assuming that the first word recorded by the TDC is the triggered data, and corresponding to real muons. Hence their distnce should be heavly correlated and the difference in distance must be small. If the events are misaligned, we will get purely random distributions of distances, pushing the metric up to a higher state. Usually 23 pm 2. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +405,7 @@
      "text": [
       "<>:15: SyntaxWarning: invalid escape sequence '\\s'\n",
       "<>:15: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_22812\\4261640906.py:15: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\Peter\\AppData\\Local\\Temp\\ipykernel_25316\\4261640906.py:15: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  ax.set_ylabel('Average $\\sqrt{d\\eta^2+d\\phi^2}$')\n"
      ]
     }
@@ -424,8 +431,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sometimes, TDCs aren't able to record the event. and output only the header word without subsequent events. It is important to see if it occurs, and we can simply count the number of events within a header"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,8 +453,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Although less useful as the rest, the number of events TDC recorded is complementary to the previous metric, and a change could suggest a change in TDC states"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,14 +517,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Events: 100%|██████████| 150/150 [00:03<00:00, 49.90Events/s]\n"
+      "Processing Events: 100%|██████████| 150/150 [00:02<00:00, 54.08Events/s]\n"
      ]
     }
    ],
@@ -532,12 +553,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To plot these on a graph, note we are calling from TAnalyser to obtain the information we needed"
+    "To plot these on a graph, note we are calling from TAnalyser to obtain the information we needed\n",
+    "\n",
+    "It is very interesting to plot this, because we are using 4 eta RPC triggers, we should expect all events contain the at least 4 events with eta in it. As you can quickly see, this isn't the case, and suggest corruptions in TDC recordings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,12 +590,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As an example, one can also plot directly from class accessing the class variable. This makes no difference fundamentally, but it does make the code much clearer and immediately clear what you are plotting"
+    "As an example, one can also plot directly from class accessing the class variable. This makes no difference fundamentally, but it does make the code much clearer and immediately clear what you are plotting\n",
+    "\n",
+    "This also means that no particular RPC is behaving poorly, hence making sure it is a TDC's error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,14 +616,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Events: 100%|██████████| 30/30 [00:00<00:00, 31.98Events/s]\n"
+      "Processing Events: 100%|██████████| 300/300 [00:03<00:00, 86.30Events/s] \n"
      ]
     }
    ],
@@ -609,7 +634,7 @@
     "interval = 100 # Set your monitoring chunck size\n",
     "fReader = rawFileReader.fileReader(file_path) # load in the classs object\n",
     "order = [[0,1], [1,2], [2,3], [3,4]] # Order what you want to align\n",
-    "max_process_event_chunk = 30 # End the loop early\n",
+    "max_process_event_chunk = 1000 # End the loop early\n",
     "processedEvents = 0 # Initialisation\n",
     "initial_event_chunk = fReader.get_aligned_events(order=order, interval=interval)\n",
     "#Initialisation\n",
@@ -626,8 +651,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TDC monitoring metric is VERY USEFUL because it shows when TDCs enters an error state, and timing corrutpion occurs. depending on how many events you are monitoring it, usually you should see a distinct difference between good and bad TDC behaviors. A rule of thumb is if the metric is 4-5 times larger than nominal state for contineous period of time, it has entered the error state"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
